--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
 name: deploy
 
 on:
-    push:
-        branches: [ main ]
+  push:
+    branches: [ main ]
 
-jobs: 
-    hello:
-        runs-on: ubuntu-latest
-        steps:
-        - name: Run a one-line script
-          run: echo Hello, World!
+jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Run a one-line script
+      run: echo Hello, world!
