--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,6 @@ jobs:
           git checkout main
           git pull
           npm install
+          npm audit fix --force
           pm2 stop discordBot.js
           pm2 start main.js --name discordBot.js
